--- a/app/package.json
+++ b/app/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "app",
+    "name": "Serencast",
     "version": "1.0.0",
-    "description": "SerencastのElectronでアプリ",
+    "description": "SerencastのElectronアプリ",
     "main": "main.js",
     "repository": {
 	"type": "git",
 	"url": "git@github.com:masui/Serencast.git"
     },
     "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1"
+	"test": "echo \"Error: no test specified\" && exit 1",
+	"start": "electron ."
     },
     "keywords": [],
     "author": "Toshiyuki Masui",
-    "license": "ISC"
+    "license": "MIT"
 }
