electronに引数を渡す

--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
     },
     "scripts": {
 	"test": "echo \"Error: no test specified\" && exit 1",
-	"start": "electron ."
+	"start": "electron .",
+	"anime": "electron . MasuiCast Anime",
+	"full": "electron . masui Watch"
     },
     "keywords": [],
     "author": "Toshiyuki Masui",
