--- a/app/Makefile
+++ b/app/Makefile
@@ -11,3 +11,10 @@ run: program
 
 anime: program
 	electron . MasuiCast Anime
+# npm run anime でもいい
+
+dmg:
+	electron-builder
+
+dmg-upload:
+	scp docs/Serencast-1.0.0.dmg Serencast.com:/home/masui/Serencast/public/Serencast.dmg
