--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "anime": "electron . MasuiCast Anime",
-    "full": "electron . masui Watch"
+    "full": "electron . masui Watch",
+    "dmg": "electron-builder"
   },
   "keywords": [],
   "author": "Toshiyuki Masui",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^4.0.0"
+  },
+  "devDependencies": {
+    "electron": "^1.7.9",
+    "electron-builder": "^19.45.5"
   },
   "build": {
     "appId": "com.pitecan.serencast",
