--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
 			"author": "Toshiyuki Masui",
 			"license": "MIT",
 			"dependencies": {
+						"coffee": "^5.4.0",
 						"dotenv": "^4.0.0",
 						"electron-referer": "^0.3.0"
 			},
