--- a/app/package.json
+++ b/app/package.json
@@ -24,12 +24,16 @@
 			"license": "MIT",
 			"dependencies": {
 						"coffee": "^5.4.0",
+						"coffee-script": "^1.12.7",
+						"coffeescript": "^2.5.1",
 						"dotenv": "^4.0.0",
-						"electron-referer": "^0.3.0"
+						"electron-referer": "^0.3.0",
+						"node": "^15.4.0",
+						"nodejs": "0.0.0"
 			},
 			"devDependencies": {
-						"electron": "^1.7.9",
-						"electron-builder": "^19.45.5"
+						"electron": "^11.1.0",
+						"electron-builder": "^19.56.2"
 			},
 			"build": {
 						"appId": "com.pitecan.serencast",
